[package]
name = "loveintg-bot"
version = "0.1.0"
authors = ["himself65 <himself65@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.11"
regex = "1"
hyper = "0.13.7"
hyper-proxy = "0.7.0"
hyper-rustls = "0.21.0"
tokio = { version = "0.2", features = ["macros", "time", "fs"]}
telegram-bot = "0.7.0"
